Finalizado cabeçalho e organizando pastas

--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
         <title>Fruta & Fruto</title>
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
+        <link rel="stylesheet" href="assets/css/cabecalho/cabecalho.css">
+        <link rel="stylesheet" href="assets/css/menu/menu-lista.css">
+        <link rel="stylesheet" href="assets/css/menu/menu-item.css">
+        <link rel="stylesheet" href="assets/css/menu/menu-link.css">
+
     </head>
     <body>
-        <header>
-            <img src="assets/img/logo.jpg" alt="logo-fruta-fruto">
-            <nav>
-                <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Receitas</a></li>
-                    <li><a href="#">Quem Somos</a></li>
-                    <li><a href="#">Comunidade</a></li>
+        <header class="cabecalho">
+            <img class="logo" src="assets/img/logo.jpg" alt="logo-fruta-fruto">
+            <nav class="menu">
+                <ul class="menu-lista">
+                    <li class="menu-item"><a href="#" class="menu-link ativo">Ínicio</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Receitas</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Quem Somos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Comunidade</a></li>
                 </ul>
             </nav>
         </header>
