--- a/index.html
+++ b/index.html
@@ -19,12 +19,22 @@
             <img class="logo" src="assets/img/logo.jpg" alt="logo-fruta-fruto">
             <nav class="menu">
                 <ul class="menu-lista">
-                    <li class="menu-item"><a href="#" class="menu-link ativo">Ínicio</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link ativo">Início</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Receitas</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Quem Somos</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Comunidade</a></li>
                 </ul>
             </nav>
         </header>
+        <main>
+            <section>
+                <img src="assets/img/banner.jpg" alt="banner do site">
+                <h2>Reaproveite melhor os alimentos!</h2>
+            </section>
+            <section>
+                <h2>Receitas para econimizar e ganhar saúde</h2>
+                <p>Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+            </section>
+        </main>
     </body>
 </html>
