--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
         <link rel="stylesheet" href="assets/css/menu/menu-lista.css">
         <link rel="stylesheet" href="assets/css/menu/menu-item.css">
         <link rel="stylesheet" href="assets/css/menu/menu-link.css">
-
+        <link rel="stylesheet" href="assets/css/banner/banner.css">
+        <link rel="stylesheet" href="assets/css/banner/banner-imagem.css">
+        <link rel="stylesheet" href="assets/css/banner/banner-titulo.css">
     </head>
     <body>
         <header class="cabecalho">
             <img class="logo" src="assets/img/logo.jpg" alt="logo-fruta-fruto">
             <nav class="menu">
-                <ul class="menu-lista">
-                    <li class="menu-item"><a href="#" class="menu-link ativo">Início</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Receitas</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Quem Somos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Comunidade</a></li>
+                <ul class="menu__lista">
+                    <li class="menu__item"><a href="#" class="menu__link ativo">Início</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Receitas</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Quem Somos</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Comunidade</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <section>
-                <img src="assets/img/banner.jpg" alt="banner do site">
-                <h2>Reaproveite melhor os alimentos!</h2>
+            <section class="banner">
+                <img src="assets/img/banner.jpg" alt="banner do site" class="banner__imagem">
+                <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
             </section>
-            <section>
-                <h2>Receitas para econimizar e ganhar saúde</h2>
-                <p>Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+            <section class="sobre">
+                <h2 class="sobre__titulo">Receitas para econimizar e ganhar saúde</h2>
+                <p class="sobre__descricao">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
             </section>
         </main>
     </body>
