Primeira parte quem somos finalizada

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <link rel="stylesheet" href="assets/css/receita/receita-titulo.css">
         <link rel="stylesheet" href="assets/css/receita/receita-descricao.css">
         <link rel="stylesheet" href="assets/css/receita/receita-botao.css">
+        <link rel="stylesheet" href="assets/css/quemSomos/quemSomos.css">
+        <link rel="stylesheet" href="assets/css/quemSomos/quemSomos-titulo.css">
+        <link rel="stylesheet" href="assets/css/quemSomos/quemSomos-descricao.css">
     </head>
     <body>
         <header class="cabecalho">
@@ -84,6 +87,22 @@
                     <img alt="Prato oriental" class="receita__imagem" src="./assets/img/receitas/prato-oriental.jpg" />
                     <div class="receita__conteudo">
                         <h4 class="receita__titulo">Prato oriental</h4>
+                        <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                        <button class="receita__botao">Ver receita</button>
+                    </div>
+                </div>
+                <div class="receita">
+                    <img alt="Beterrabas assadas" class="receita__imagem" src="./assets/img/receitas/beterrabas-assadas.jpg" />
+                    <div class="receita__conteudo">
+                        <h4 class="receita__titulo">Beterrabas assadas</h4>
+                        <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                        <button class="receita__botao">Ver receita</button>
+                    </div>
+                </div>
+                <div class="receita">
+                    <img alt="Beterrabas assadas" class="receita__imagem" src="./assets/img/receitas/beterrabas-assadas.jpg" />
+                    <div class="receita__conteudo">
+                        <h4 class="receita__titulo">Beterrabas assadas</h4>
                         <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
                         <button class="receita__botao">Ver receita</button>
                     </div>
