--- a/index.html
+++ b/index.html
@@ -146,5 +146,8 @@
                 </div>
             </section>
         </main>
+        <footer>
+            
+        </footer>
     </body>
 </html>
