--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </header>
         <main>
             <section class="banner">
-                <img src="assets/img/banner.jpg" alt="banner do site" class="banner__imagem">
+                <div class="banner__imagem"></div>
                 <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
             </section>
             <section class="sobre">
@@ -147,7 +147,7 @@
             </section>
         </main>
         <footer>
-            
+
         </footer>
     </body>
 </html>
