alterando css e iniciando rodape

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                 </div>
             </section>
         </main>
-        <footer>
-
+        <footer class="rodape">
+            
         </footer>
     </body>
 </html>
