--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <link rel="stylesheet" href="assets/css/pessoa/pessoa-imagem-andreia.css">
         <link rel="stylesheet" href="assets/css/pessoa/pessoa-imagem-marcela.css">
         <link rel="stylesheet" href="assets/css/pessoa/pessoa-imagem-roberta.css">
+        <link rel="stylesheet" href="assets/css/rodape.css">
+        <link rel="stylesheet" href="assets/css/logo.css">
     </head>
     <body>
         <header class="cabecalho">
@@ -147,7 +149,7 @@
             </section>
         </main>
         <footer class="rodape">
-            
+            <p>&copythiago.dev</p>
         </footer>
     </body>
 </html>
